Closed Bug 1257472 Opened 8 years ago Closed 8 years ago

ice candidate parsing error when icetransports is set to relay in chrome

Categories

(Core :: WebRTC, defect, P1)

46 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox46 --- fixed
firefox47 --- fixed
firefox48 --- fixed

People

(Reporter: philipp, Assigned: bwc)

Details

Attachments

(2 files)

Attached file aboutWebrtc.html
from https://github.com/andyet/SimpleWebRTC/issues/414

Apparently Firefox has issues with the relay candidate chrome sends:
Error parsing attribute: a=candidate:838043334 1 udp 41885439 104.130.195.95 32968 typ relay raddr 0.0.0.0 rport 0 generation 0


does not seem to be a regression caused by chromes new per-candidate ufrag at least.
(ignore the 'Message does not correspond to any registered stun ctx' in the attached log - the TURN server doesn't care about permissions)
alternatively easy to reproduce with apprtc by setting ?it=relay
Per original report fippo links to: "I think the problem occurs because Chrome sets raddr 0.0.0.0 and rport 0."
Byron, Nils -- This is probably easy to fix (I know: "famous last words"), and I'd like to get a fix for this done quickly.  Can one you take this and the other review the fix?  Thanks.
Rank: 15
Flags: needinfo?(drno)
Flags: needinfo?(docfaraday)
Priority: -- → P1
This is probably where we're rejecting this:

https://dxr.mozilla.org/mozilla-central/source/media/mtransport/third_party/nICEr/src/ice/ice_parser.c#304
Flags: needinfo?(docfaraday)
Attachment #8731734 - Flags: review+
Comment on attachment 8731734 [details]
MozReview Request: Bug 1257472: Forgive rport of 0. r?drno

https://reviewboard.mozilla.org/r/40799/#review37309

LGTM
Comment on attachment 8731734 [details]
MozReview Request: Bug 1257472: Forgive rport of 0. r?drno

https://reviewboard.mozilla.org/r/40799/#review37369
Attachment #8731734 - Flags: review?(drno) → review+
Flags: needinfo?(drno)
Assignee: nobody → docfaraday
https://hg.mozilla.org/mozilla-central/rev/0a0cbca83706
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Byron -- can you request uplift to Aurora and Beta?   Beta 4 should go to build today.  I'd love to get it into Beta 4, but if we miss 4, let's make 5 for sure.  Thanks!
Flags: needinfo?(docfaraday)
Comment on attachment 8731734 [details]
MozReview Request: Bug 1257472: Forgive rport of 0. r?drno

Approval Request Comment
[Feature/regressing bug #]:

   Present since webrtc landed.

[User impact if declined]:

   Connectivity failures when interoperating with Chrome.

[Describe test coverage new/current, TreeHerder]:

   No new coverage.

[Risks and why]:

   Extremely low, we are simply being more forgiving on the candidate parse.

[String/UUID change made/needed]:

   None.
Flags: needinfo?(docfaraday)
Attachment #8731734 - Flags: approval-mozilla-beta?
Attachment #8731734 - Flags: approval-mozilla-aurora?
Comment on attachment 8731734 [details]
MozReview Request: Bug 1257472: Forgive rport of 0. r?drno

Improve webrtc, taking it.
Should be in 46 beta 5
Attachment #8731734 - Flags: approval-mozilla-beta?
Attachment #8731734 - Flags: approval-mozilla-beta+
Attachment #8731734 - Flags: approval-mozilla-aurora?
Attachment #8731734 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: