Bug 1257472: Forgive rport of 0. r=drno,ekr a=sylvestre

MozReview-Commit-ID: 12YyYqrt3wR